fixed GuestList alignment in EventCard

--- a/src/components/event-card/EventCard.module.css
+++ b/src/components/event-card/EventCard.module.css
@@ -22,7 +22,7 @@
 }
 
 .guests {
-  margin-bottom: 6px;
+  height: 36px;
 }
 
 .linkToEvent {
